testsuite/tests/polykinds/T15795.stderr

T15795.hs:12:3: error:
    • Cannot generalise type because a skolem would escape.
      When generalising this type:
        forall k (b :: k). T @k @a0 b
      these skolems would escape:
        k
      if we quantified this variable:
        (a0 :: k)
      (Indeed, I sometimes struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the definition of data constructor ‘MkT’
      In the data declaration for ‘T’
